# Edge-AI-Object-Detection-on-ESP32

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/pedestrian_detect/: idf_component.yml
eval/: eval_fps.txt
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
main/src/: mu_detector.cpp  mu_detector.hpp  mu_server.cpp  mu_server.hpp  mu_wifi.c  mu_wifi.h  take_picture.c  take_picture.h
main/web/: index.html
